@startuml

set separator ::

class Document {
  -{static} std::map<std::filesystem::path, std::shared_ptr<Document>> documents

  -command::CommandManager commandManager

  -Vector2 dimensions
  -std::shared_ptr<figure::FigureGroup> root
  -std::shared_ptr<figure::FigureGroup> selectedGroup

  +{static} std::shared_ptr<Document> getDocument(const std::filesystem::path& path)
  +{static} std::vector<std::filesystem::path> getDocumentNames()

  -Document()
  -Document(const Document&) = default
  -Document(Document&&) = default

  +Vector2 getDimenstions()
  +void setDimenstions(Vector2 newDims)
  +std::shared_ptr<figure::FigureRoot> getRoot()
  +const std::filesystem::path& getFilePath()
  +void setFilePath(const std::filesystem::path&)
  +void close()
  +void loadFromFile()
  +void saveToFile()
  +void exportAsBitmap(BitmapFormat format)
  +command::CommandManager& getCommandManager()
  +std::shared_ptr<figure::FigureGroup> getSelectedGroup()
  +void setSelectedGroup(std::shared_ptr<figure::FigureGroup> group)
}

Document -* Document
Document *--- "0..n" figure::Figure
Document *-- command::CommandManager

note right of Document
  Ta klasa stanowi Multiton
end note

class command::CommandManager {
  -std::stack<std::shared_ptr<Command>> doneCommands
  -std::stack<std::shared_ptr<Command>> undoneCommands

  +void addCommand(std::shared_ptr<Command> newCmd)
  +void undo()
  +void redo()
}

command::CommandManager *-- command::Command

interface command::Command {
  +{abstract} void execute()
  +{abstract} void unexecute()
}

class command::MovePointCommand {
  -std::shared_ptr<figure::Figure> fig
  -std::size_t pointId
  -Vector2 oldPos, newPos

  +MovePointCommand(std::shared_ptr<figure::Figure> fig, std::size_t pointId, Vector2 oldPos, Vector2 newPos)

  +void execute()
  +void unexecute()
}

command::Command <|-- command::MovePointCommand
command::MovePointCommand o-- figure::Figure

class command::AddFigureCommand {
  -std::shared_ptr<figure::FigureGroup> parent
  -std::shared_ptr<figure::Figure> fig

  +AddFigureCommand(std::shared_ptr<figure::FigureGroup> parent, std::shared_ptr<figure::Figure> fig)

  +void execute()
  +void unexecute()
}

command::Command <|-- command::AddFigureCommand
command::AddFigureCommand o-- figure::Figure
command::AddFigureCommand o-- figure::FigureGroup

class command::RemoveFigureCommand {
  -ParentAndIndex parent
  -std::shared_ptr<figure::Figure> fig

  +RemoveFigureCommand(std::shared_ptr<figure::FigureGroup> parent, std::shared_ptr<figure::Figure> fig)

  +void execute()
  +void unexecute()
}

command::Command <|-- command::RemoveFigureCommand
command::RemoveFigureCommand o-- figure::Figure
command::RemoveFigureCommand o-- figure::FigureGroup

class command::ChangeFigurePropsCommand {
  -std::shared_ptr<figure::Figure> fig
  -FigureProps oldProps
  -FigureProps newProps

  +ChangeFigurePropsCommand(std::shared_ptr<figure::Figure> fig, FigureProps oldProps, FigureProps newProps)

  +void execute()
  +void unexecute()
}

command::Command <|-- command::ChangeFigurePropsCommand
command::ChangeFigurePropsCommand o-- figure::Figure

class command::ChangeParentCommand {
  -ParentAndIndex oldParent, newParent
  -std::shared_ptr<figure::Figure> fig

  +ChangeParentCommand(std::shared_ptr<figure::Figure> fig, ParentAndIndex oldParent, ParentAndIndex newParent)

  +void execute()
  +void unexecute()
}

command::Command <|-- command::ChangeParentCommand
command::ChangeParentCommand o-- figure::Figure
command::ChangeParentCommand o-- figure::FigureGroup

note right of command
  Klasy zawarte w tej przestrzeni nazw implementują wzorzec Komenda
end note

abstract figure::Figure {
  +{abstract} std::shared_ptr<Figure> clone()

  +{abstract} Vector2 getOrigin()
  +{abstract} void setOrigin(Vector2 origin)

  +{abstract} void accept(visitor::FigureVisitor& vis)

  +{abstract} std::shared_ptr<PointEditor> makePointEditor()

  +{abstract} Color getFill()
  +{abstract} void setFill(Color c)

  +{abstract} Color getStroke()
  +{abstract} void setStroke(Color c)

  +{abstract} float getStrokeWeight()
  +{abstract} void setStrokeWeight(float w)
}

note right of Figure
  Ta klasa stanowi komponent w Kompozycie figur
end note

note right of Figure::clone
  Metoda `clone` pozwala tworzyć kopię obiektu, pozwalając na imlementację Prototypu
end note

note right of Figure::makePointEditor
  Metoda `makePointEditor` tworzy edytor odpowiedni dla danej figury implementując Factory Method
end note

class figure::FigureBase<FigureType> {
  #Vector2 origin;
  #Color fill, stroke;
  #float strokeWeight;

  +std::shared_ptr<Figure> clone()

  +Vector2 getOrigin()
  +void setOrigin(Vector2 newOrigin)

  +void accept(visitor::FigureVisitor& vis)

  +Color getFill()
  +void setFill(Color c)

  +Color getStroke()
  +void setStroke(Color c)

  +float getStrokeWeight()
  +void setStrokeWeight(float w)
}

figure::Figure <|-- figure::FigureBase : <<implements>>

class figure::FigureGroup {
  -std::vector<std::shared_ptr<Figure>> children;

  +void addChild(std::shared_ptr<Figure> figure)
  +void removeChild(std::shared_ptr<Figure> figure)
  +const std::vector<std::shared_ptr<Figure>>& getChildren()

  +std::shared_ptr<Figure> clone()

  +Vector2 getOrigin()
  +void setOrigin(Vector2 newOrigin)

  +void accept(visitor::FigureVisitor& vis)

  +std::shared_ptr<PointEditor> makePointEditor()

  +Color getFill()
  +void setFill(Color c)

  +Color getStroke()
  +void setStroke(Color c)

  +float getStrokeWeight()
  +void setStrokeWeight(float w)
}

figure::Figure <|-- figure::FigureGroup
figure::FigureGroup "1" *-- "n" figure::Figure

class figure::CircleFigure {
  -float radius

  +void setRadius(float newRadius)
  +float getRadius()

  +std::shared_ptr<PointEditor> makePointEditor()
}

figure::FigureBase <|-- figure::CircleFigure : FigureType = CircleFigure

class figure::RectFigure {
  -Vector2 dimensions

  +void setDimensions(Vector2 newDimensions)
  +Rectangle getRectangle()

  +std::shared_ptr<PointEditor> makePointEditor()
}

figure::FigureBase <|-- figure::RectFigure : FigureType = RectFigure

class figure::LineFigure {
  -Vector2 secondPoint

  +void setSecondPoint(Vector2 newPosition)
  +Vector2 getSecondPoint()

  +std::shared_ptr<PointEditor> makePointEditor()
}

figure::FigureBase <|-- figure::LineFigure : FigureType = LineFigure

class figure::PolygonFigure {
  -std::vector<Vector2> points;

  +void insertPoint(std::size_t idx, Vector2 newPosition)
  +void updatePoint(std::size_t idx, Vector2 newPosition)
  +const std::vector<Vector2>& getPoints()

  +std::shared_ptr<PointEditor> makePointEditor()
}

figure::FigureBase <|-- figure::PolygonFigure : FigureType = PolygonFigure

interface figure::PointEditor {
  {abstract} std::vector<Point> getEditPoints()
  {abstract} void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

class figure::adapter::GroupPointEditor {
  -std::shared_ptr<FigureGroup> group;

  +GroupPointEditor(std::shared_ptr<FigureGroup> group)

  +std::vector<Point> getEditPoints()
  +void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

figure::PointEditor <|-- figure::adapter::GroupPointEditor : <<implement>>
figure::adapter::GroupPointEditor o-- figure::FigureGroup

class figure::adapter::RectFigurePointEditor {
  -std::shared_ptr<RectFigure> rect

  +RectFigurePointEditor(std::shared_ptr<RectFigure> rect)

  +std::vector<Point> getEditPoints()
  +void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

figure::PointEditor <|-- figure::adapter::RectFigurePointEditor : <<implement>>
figure::adapter::RectFigurePointEditor o-- figure::RectFigure

class figure::adapter::CircleFigurePointEditor {
  -std::shared_ptr<CircleFigure> circle

  +CircleFigurePointEditor(std::shared_ptr<CircleFigure> circle)

  +std::vector<Point> getEditPoints()
  +void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

figure::PointEditor <|-- figure::adapter::CircleFigurePointEditor : <<implement>>
figure::adapter::CircleFigurePointEditor o-- figure::CircleFigure

class figure::adapter::LineFigurePointEditor {
  -std::shared_ptr<LineFigure> line

  +LineFigurePointEditor(std::shared_ptr<LineFigure> line)

  +std::vector<Point> getEditPoints()
  +void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

figure::PointEditor <|-- figure::adapter::LineFigurePointEditor : <<implement>>
figure::adapter::LineFigurePointEditor o-- figure::LineFigure

class figure::adapter::PolygonFigurePointEditor {
  -std::shared_ptr<PolygonFigure> poly

  +PolygonFigurePointEditor(std::shared_ptr<PolygonFigure> poly)

  +std::vector<Point> getEditPoints()
  +void updatePointPosition(std::size_t pointId, Vector2 newPos)
}

figure::PointEditor <|-- figure::adapter::PolygonFigurePointEditor : <<implement>>
figure::adapter::PolygonFigurePointEditor o-- figure::PolygonFigure

note right of adapter
  Klasy znajduące się w przestrzeni `figure::adapter` stanowią Adaptery
  poszczególnych podklas `figure::Figure` do interfejsu `figure::PointEditor`
end note

interface figure::visitor::FigureVisitor {
  +{abstract} void visit(RectFigure& rect)
  +{abstract} void visit(CircleFigure& circle)
  +{abstract} void visit(LineFigure& line)
  +{abstract} void visit(PolygonFigure& poly)
}

note right of FigureVisitor
  Klasa stanowi interfejs Odwiedzających podklasy `figure::Figure`
end note

class figure::visitor::RendererVisitor {
  +void visit(RectFigure& rect)
  +void visit(CircleFigure& circle)
  +void visit(LineFigure& line)
  +void visit(PolygonFigure& poly)
}

figure::visitor::FigureVisitor <|-- figure::visitor::RendererVisitor

class figure::visitor::BitmapRendererVisitor {
  -int width, height
  -RenderTexture2D renderTexture

  +BitmapRendererVisitor(int width, int height)
  +Image getImage()

  +void visit(RectFigure& rect)
  +void visit(CircleFigure& circle)
  +void visit(LineFigure& line)
  +void visit(PolygonFigure& poly)

  -void visitImpl<F>(F& figure)
}

figure::visitor::RendererVisitor <|-- figure::visitor::BitmapRendererVisitor

class figure::visitor::PointIntersectionVisitor {
  -Vector2 point
  -bool gotIntersection = false

  +PointIntersectionVisitor(Vector2 point)

  +bool intersects()

  +void visit(RectFigure& rect)
  +void visit(CircleFigure& circle)
  +void visit(LineFigure& line)
  +void visit(PolygonFigure& poly)
}

figure::visitor::FigureVisitor <|-- figure::visitor::PointIntersectionVisitor

class figure::visitor::SvgSerializerVisitor {
  -std::stringstream outStream

  +SvgSerializerVisitor(Vector2 point)

  +void reset()
  +std::string finalize()

  +void visit(RectFigure& rect)
  +void visit(CircleFigure& circle)
  +void visit(LineFigure& line)
  +void visit(PolygonFigure& poly)
}

figure::visitor::FigureVisitor <|-- figure::visitor::SvgSerializerVisitor

abstract ui::Widget {
  #Rectangle rect

  +{abstract} void update();
  +void setRect(const Rectangle& rect)
}

note right of Widget
  Klasa opisuje komponent w hierarchi budującej interfejs użytkownika
  implementując wzorzec Kompozyt
end note

class ui::AppUi {
  -std::shared_ptr<DocumentTabs> tabBar
  -std::shared_ptr<Toolbar> toolbar
  -std::shared_ptr<Editor> editor
  -std::vector<std::shared_ptr<KeyboardShortcut>> shortcuts

  #AppUi()

  #void update()
  #void setRect(const Rectangle& rect)
}

ui::Widget <|-- ui::AppUi
ui::AppUi *-- ui::DocumentTabs
ui::AppUi *-- ui::Toolbar
ui::AppUi *-- ui::Editor
ui::AppUi *-- "n" ui::KeyboardShortcut

class ui::DocumentTabs {
  -std::filesystem::path openedFilePath
  -std::shared_ptr<strategy::Strategy<std::filesystem::path>> openStrategy

  +void update()

  +void setOpenedFile(std::string newName);
  +void setOpenStrategy(std::shared_ptr<strategy::Strategy<std::filesystem::path>> strategy);
}

ui::Widget <|-- ui::DocumentTabs
ui::DocumentTabs o-- ui::strategy::Strategy

class ui::Toolbar {
  -std::vector<std::shared_ptr<Widget>> widgets

  +void update()
  +void setRect(const Rectangle& rect)

  +void addWidget(std::shared_ptr<Widget> tool)
}

ui::Widget <|-- ui::Toolbar
ui::Toolbar *-- "0..n" ui::Widget

class ui::Editor {
  -std::shared_ptr<Document> doc
  -Camera2D camera
  -Mode mode = Mode::Select
  -std::shared_ptr<figure::Figure> figurePrototype

  -std::shared_ptr<figure::Figure> selectedFigure
  -std::optional<std::size_t> draggedPointId

  -std::shared_ptr<FigurePropertiesPanel> propsPanel
  -std::shared_ptr<DocumentPropertiesPanel> docPropsPanel
  -std::shared_ptr<DocumentHierarchyPanel> docHierPanel

  -std::shared_ptr<Strategy<std::filesystem::path>> openStrategy

  -GuiIconName cursorIcon = ICON_NONE

  +Editor()

  +void update()
  +void setRect(const Rectangle& rect)

  +void setDocument(std::shared_ptr<Document> doc)
  +void resetCamera()
  +void setMode(Mode newMode)
  +void setFigurePrototype(std::shared_ptr<figure::Figure> newProto)
  +void setCursorIcon(GuiIconName icon)
  +void setOpenStrategy(std::shared_ptr<strategy::Strategy<std::filesystem::path>> newStrategy)
  +void duplicateSelectedFigure()
  +void undo()
  +void redo()

  -bool isFocused()
  -Vector2 getCursorPos()
  -void processModeSelect()
  -void processModeInsert()
  -void selectFigure(std::shared_ptr<figure::Figure> figure)
  -void handleDroppedFiles(FilePathList droppedFiles)
}

ui::Widget <|-- ui::Editor
ui::Editor o--- Document
ui::Editor o--- "1" figure::Figure : holds prototype
ui::Editor o--- "1" figure::Figure : has selected
ui::Editor *-- ui::FigurePropertiesPanel
ui::Editor *-- ui::DocumentPropertiesPanel
ui::Editor *-- ui::DocumentHierarchyPanel
ui::Editor o--- ui::strategy::Strategy

class ui::FigurePropertiesPanel {
  -std::shared_ptr<figure::Figure> editedFig
  -ColorMode colorEditMode = ColorMode::Fill

  +void update()

  +void setFigure(std::shared_ptr<figure::Figure> newFig)
}

ui::Widget <|-- ui::FigurePropertiesPanel
ui::FigurePropertiesPanel o--- "1" figure::Figure : edits

class ui::DocumentPropertiesPanel {
  -std::shared_ptr<Document> editedDoc

  +void update()

  +void setDocument(std::shared_ptr<Document> newDoc)
}

ui::Widget <|-- ui::DocumentPropertiesPanel
ui::DocumentPropertiesPanel o--- "1" Document : edits

class ui::DocumentHierarchyPanel {
  -std::shared_ptr<Document> editedDoc
  -std::shared_ptr<figure::Figure> selectedFigure

  +void update()

  +void setDocument(std::shared_ptr<Document> newDoc)
  +void setSelectedFig(std::shared_ptr<figure::Figure> fig)
}

ui::Widget <|-- ui::DocumentHierarchyPanel
ui::DocumentHierarchyPanel o--- "1" Document : edits

class ui::IconButton {
  -GuiIconName icon
  -std::shared_ptr<strategy::Strategy<>> strategy

  +IconButton(GuiIconName icon)
  +void update()

  +void setStrategy(std::shared_ptr<strategy::Strategy<>> newStrategy)
}

ui::Widget <|-- ui::IconButton
ui::IconButton o-- ui::strategy::Strategy

class ui::KeyboardShortcut {
  -int modifier, key;
  -std::shared_ptr<strategy::Strategy<>> strategy

  +KeyboardShortcut(int modifier, int key)
  +void update()

  +void setStrategy(std::shared_ptr<strategy::Strategy<>> newStrategy)
}

ui::KeyboardShortcut o-- ui::strategy::Strategy

interface  ui::strategy::Strategy<Args...> {
  {abstract} void execute(Args... args)
}

note right of Strategy
  Klasa stanowi elastyczny interfejs klas implementujących
  wzorzec Strategia
end note

class ui::strategy::NewDocumentStrategy {
  -std::shared_ptr<DocumentTabs> tabs
  -int newNameCounter = 0

  +NewDocumentStrategy(std::shared_ptr<DocumentTabs> tabs)

  +void execute()
}

ui::strategy::Strategy <|-- ui::strategy::NewDocumentStrategy : Args... = ()
ui::strategy::NewDocumentStrategy o-- ui::DocumentTabs : acts upon

class ui::strategy::OpenDocumentStrategy {
  -std::shared_ptr<Editor> editor

  +OpenDocumentStrategy(std::shared_ptr<Editor> editor)

  +void execute(std::filesystem::path docName)
}

ui::strategy::Strategy <|-- ui::strategy::OpenDocumentStrategy : Args... = (std::filesystem::path)
ui::strategy::OpenDocumentStrategy o-- ui::Editor : acts upon

class ui::strategy::SetFigureInsertStrategy {
  -std::shared_ptr<Editor> editor
  -std::shared_ptr<figure::Figure> figurePrototype
  -GuiIconName icon

  +SetFigureInsertStrategy(std::shared_ptr<Editor> editor, std::shared_ptr<figure::Figure> figurePrototype, GuiIconName icon)

  +void execute()
}

ui::strategy::Strategy <|-- ui::strategy::SetFigureInsertStrategy : Args... = ()
ui::strategy::SetFigureInsertStrategy o-- ui::Editor : acts upon
ui::strategy::SetFigureInsertStrategy *--- figure::Figure : stores the prototype

class ui::strategy::DuplicateFigureStrategy {
  -std::shared_ptr<Editor> editor

  +DuplicateFigureStrategy(std::shared_ptr<Editor> editor)

  +void execute()
}

ui::strategy::Strategy <|-- ui::strategy::DuplicateFigureStrategy : Args... = ()
ui::strategy::DuplicateFigureStrategy o-- ui::Editor : acts upon

class ui::strategy::UndoStrategy {
  -std::shared_ptr<Editor> editor

  +UndoStrategy(std::shared_ptr<Editor> editor)

  +void execute()
}

ui::strategy::Strategy <|-- ui::strategy::UndoStrategy : Args... = ()
ui::strategy::UndoStrategy o-- ui::Editor : acts upon

class ui::strategy::RedoStrategy {
  -std::shared_ptr<Editor> editor

  +RedoStrategy(std::shared_ptr<Editor> editor)

  +void execute()
}

ui::strategy::Strategy <|-- ui::strategy::RedoStrategy : Args... = ()
ui::strategy::RedoStrategy o-- ui::Editor : acts upon

@enduml
